--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -97,7 +97,7 @@
     "BookAppointment": "Book Appointment",
     "Ask": "Ask",
     "Placeholder": "Ask our AI assistant...",
-    "SwitchLang": "Switch Language"
+    "SwitchLang": "Language"
   },
   "dashboard": {
     "title": "Dashboard",
