--- a/src/locales/hi.json
+++ b/src/locales/hi.json
@@ -97,7 +97,7 @@
   "BookAppointment": "अपॉइंटमेंट बुक करें",
   "Ask": "पूछें",
   "Placeholder": "हमारे AI सहायक से पूछें...",
-  "SwitchLang": "भाषा बदलें"
+  "SwitchLang": "भाषा"
 },
 "dashboard": {
     "title": "डैशबोर्ड",
